addons/kyverno/policies/medtech-iso_13485_document_control-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: medtech-iso_13485_document_control
  annotations:
    rulehub.id: medtech.iso_13485_document_control
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: medtech.iso_13485_document_control: example validation
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
